# benri

./: pyproject.toml
src/benri/: __init__.py  data.py  graphics.py  quantum.py  telegram_bot.py
